2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1197

	* 3rdparty/invlib/src/invlib/map.cc: Forgot to change syntax
	  here as well.

2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1196

	* 3rdparty/invlib/src/invlib/map.h: <typename> typename syntax for
	  template template not available in gcc4.

	* 3rdparty/invlib/src/invlib/map.cc: Removed print statement.

	* 3rdparty/invlib/src/invlib/optimization/levenberg_marquardt.cc:
	  Fixed compiler warnings.

	* 3rdparty/invlib/src/invlib/convergence_criteria.h: Fixed compiler
	  warnings.

	* 3rdparty/invlib/src/invlib/m_oem.cc: Fixed compiler warnings.

2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1196

	* src/test_covariance_matrix.cc: Fixed call to
	  Sparse::insert_elements.

2019-02-04  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1196

	* src/covariance_matrix.[h, cc]: Take into account inverse block
	  when computing number of rows. Added function that returns
          diagonal of precision Matrix.

        * src/matpackII.[h, cc]: Added function to create sparse diagonal
          matrix from vector.

        * src/m_oem.cc: Use diagonal of precision matrix as damping
          matrix in LM algorithm.

        * src/oem.h: Set convergence criterion to be used by OEM.

        * 3rdparty/invlib/src/invlib/convergence_criterion.h: Added header
          file containing convergence criteria.

        * 3rdparty/invlib/src/invlib/map.[cpp, h]: Handle convergence generic
          convergence criteria.

2019-02-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1210

	* src/m_abs.cc (abs_linesReadFromHitran):

	Backport patch by Jana for HITRAN 2016 file support from arts 2.2.

2019-01-31  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1209
	
	* src/linerecord.h:  Changed interface so already internal variables
	don't have to be passed.  Also added a zero Zeeman effect init
	